# apps/api/users/urls.py
@@ -7,6 +7,8 @@ from users.views import (
     CurrentUserView,
     FollowRequestsView,
     FollowView,
+    PasswordResetConfirmView,
+    PasswordResetView,
     ProfileView,
     RegisterView,
     RespondToRequestView,
@@ -23,6 +25,12 @@ urlpatterns: list[URLPattern | URLResolver] = [
     path("session", SessionView.as_view(), name="session"),
     path("me", CurrentUserView.as_view(), name="me"),
     path("search", SearchView.as_view(), name="search"),
+    path("password/reset", PasswordResetView.as_view(), name="password-reset"),
+    path(
+        "password/reset/confirm",
+        PasswordResetConfirmView.as_view(),
+        name="password-reset-confirm",
+    ),
     path("requests", FollowRequestsView.as_view(), name="requests"),
     path("<str:username>", ProfileView.as_view(), name="profile"),
     path("<str:username>/follow", FollowView.as_view(), name="follow"),
